# AHI-Flutter-Body

./: .gitignore  BRD.txt  CLAUDE.md  logic.txt  package-lock.json  ui.txt
ahi-bodyscan-react/: .env.example  BodyScan-Implementation-Status.md  BodyScan-Migration-Summary.md  DEPLOY_FULL_METRICS.md  README.md  (+36 more)
ahi-bodyscan-react/downloaded/ahi-digitalhealthcheck-phil_conference/src/: README.md  depend.sh  pyproject.toml  requirements.txt
ahi-bodyscan-react/downloaded/ahi-digitalhealthcheck-phil_conference/src/ahi-web-bhalite-prod/: cloudfront_proxy.py  index.py
ahi-bodyscan-react/downloaded/ahi-digitalhealthcheck-phil_conference/src/ahi-web-bhalite-prod/assets/: medtech.html
ahi-bodyscan-react/downloaded/ahi-digitalhealthcheck-phil_conference/src/ahi-web-bhalite-prod/assets/css/: ratio.css
ahi-bodyscan-react/downloaded/ahi-digitalhealthcheck-phil_conference/src/ahi-web-bhalite-prod/assets/js/: particle-system.js  questions.js
ahi-bodyscan-react/downloaded/ahi-digitalhealthcheck-phil_conference/src/ahi-web-bhalite-prod/assets/js/lib/: index.js  rppg.js
ahi-bodyscan-react/downloaded/ahi-digitalhealthcheck-phil_conference/src/ahi-web-bhalite-prod/controllers/: EdgeResponse.py  EdgeRouter.py  headlessBHAController.py  sessionController.py
ahi-bodyscan-react/downloaded/ahi-digitalhealthcheck-phil_conference/src/ahi-web-bhalite-prod/hypymedia/: __init__.py  html_list.py  main.py
ahi-bodyscan-react/downloaded/ahi-digitalhealthcheck-phil_conference/src/ahi-web-bhalite-prod/models/: healthscore_model.py  questions_model.py
ahi-bodyscan-react/downloaded/ahi-digitalhealthcheck-phil_conference/src/ahi-web-bhalite-prod/views/: error_view.py  index_view.py  result_view.py  scan_view.py  template.py
ahi-bodyscan-react/downloaded/ahi-digitalhealthcheck-phil_conference/src/ahi-web-bhalite-prod/views/questions/: questions_view.py  section_activity.py  section_biological_sex.py  section_body_shape.py  section_bp_medications.py  section_chronic_medications.py  section_dob.py  section_email.py  section_height.py  section_history.py  section_index.py  section_smoker.py  section_weight.py
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/AHIBodyScan/src/main/cpp/: CMakeLists.txt  KeysUtil.cpp
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/AHIBodyScan/src/main/cpp/include/: KeysUtil.hpp
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/Common/src/main/cpp/: AHIBSCereal.cpp  AHIBSCereal.hpp  CMakeLists.txt  Common.cpp  Common.hpp
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/Common/src/main/cpp/jnihelper/: JNIHelper.cpp  JNIHelper.hpp
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartClassification/src/main/cpp/: AHIAvatarGenClassificationHelper.cpp  AutoLock.cpp  CMakeLists.txt  Classification.cpp  ClassificationJNI.cpp  Mutex.cpp  ahiFactoryClassify.cpp  ahiFactoryTensor.cpp  ahiModelsZoo.cpp
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartClassification/src/main/cpp/include/: AHIAvatarGenClassificationHelper.hpp  AHIAvatarGenMdlBase.hpp  AssetManager.hpp  AutoLock.hpp  Base64.hpp  Classification.hpp  Constants.hpp  Logging.hpp  Mutex.hpp  Thread.hpp  Types.hpp  ahiFactoryClassify.hpp  ahiFactoryTensor.hpp  ahiModelsZoo.hpp  chacha20.hpp  common_generated.h  log2022.h  priority_queue.h  queue.h
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartClassification/src/main/cpp/libs/jsoncpp/: Android.mk
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartContour/src/main/cpp/: AvatarGenCommon.cpp  AvatarGenCommon.hpp  AvatarGenContour.cpp  AvatarGenContour.hpp  AvatarGenPredMesh.cpp  AvatarGenPredMesh.hpp  AvatarGenSegmentAndAuto.cpp  AvatarGenSegmentAndAuto.hpp  CMakeLists.txt  ContourGenerator.cpp  ContourGenerator.hpp  ContourGeneratorJNI.cpp
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartInversion/PartInversionExample/src/main/cpp/: CMakeLists.txt
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartInversion/src/main/cpp/: AHIAvatarGenFace.cpp  AHIAvatarGenInversion.cpp  AHIAvatarGenPredMesh.cpp  AHIAvatarGenVec3.cpp  AvatarGenCommon.cpp  CMakeLists.txt  InversionJNI.cpp
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartInversion/src/main/cpp/include/: AHIAvatarGenFace.hpp  AHIAvatarGenInversion.hpp  AHIAvatarGenPredMesh.hpp  AHIAvatarGenTypes.hpp  AHIAvatarGenVec3.hpp  AvatarGenCommon.hpp
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartPoseInspection/src/main/cpp/: CMakeLists.txt  PoseInspection.cpp  PoseInspection.hpp  PoseInspectionJNI.cpp
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartResources/src/main/cpp/: CMakeLists.txt  ResourcesJNI.cpp
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartSegmentation/src/main/cpp/: AHIAvatarGenContour.cpp  AHIAvatarGenHaarcascade_frontalface_alt2.cpp  AHIAvatarGenSegmentAndAuto.cpp  AHIAvatarGenSegmentationJointsHelper.cpp  CMakeLists.txt  Segmentation.cpp  SegmentationJNI.cpp  ahiCommon.cpp  ahiFactoryFace.cpp  ahiFactoryInspection.cpp  ahiFactoryPose.cpp  ahiFactorySegment.cpp  ahiFactoryTensor.cpp
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartSegmentation/src/main/cpp/include/: AHIAvatarGenContour.hpp  AHIAvatarGenHaarcascade_frontalface_alt2.hpp  AHIAvatarGenHaarcascade_profileface.hpp  AHIAvatarGenSegmentAndAuto.hpp  AHIAvatarGenSegmentationJointsHelper.hpp  AvatarGenPredMesh.hpp  CameraConstants.hpp  FactoryTensor.hpp  Logging.hpp  Segmentation.hpp  ahiCommon.hpp  ahiFactoryFace.hpp  ahiFactoryInspection.hpp  ahiFactoryPose.hpp  ahiFactorySegment.hpp  ahiFactoryTensor.hpp  common_generated.h  haarcascade_frontalface_alt2.h  log2022.h
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartSegmentation/src/main/cpp/libs/jsoncpp/: CMakeLists.txt
ahi-bodyscan-react/downloaded/ahi-sdk-bodyscan-android-24.10-dev/PartSegmentation/src/main/cpp/libs/prebuilt-tensorflow-lite/include/tensorflow/lite/: interpreter_builder.h
(+660 files in other folders)
