[tool.poetry]
name = "ahi-web-bhalite-prod"
version = "0.1.0"
description = ""
authors = ["Tel Stupple <terence.stupple@ahi.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hypymedia = "^0.1.16"
boto3 = "^1.34.115"
jwcrypto = "^1.5.6"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
